Agregado el contenido adicional del blog y una diferente tipografia

--- a/articulo.html
+++ b/articulo.html
@@ -14,6 +14,9 @@
             <p>Y este es el parrafo de Inicio donde vamos a explicar las
                 cosas increibles que se hacen con ramas
             </p>
+            <p>Informacion de los blogs y su forma de
+                compartir las cosas
+            </p>
         </div>
     </div>
 </body>
